<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="title" translatable="false">Playlist maker</string>
    <string name="button_search" translatable="false">Поиск</string>
    <string name="button_media" translatable="false">Медиатека</string>
    <string name="button_settings" translatable="false">Настройки</string>
    <string name="dark_theme" translatable="false">Темная тема</string>
    <string name="share" translatable="false">Поделиться приложением</string>
    <string name="write_to_support" translatable="false">Написать в поддержку</string>
    <string name="terms_of_use" translatable="false">Пользовательское соглашение</string>
    <string name="share_app_message" translatable="false">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="write_to_support_message" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="write_to_support_subject" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email" translatable="false">ele.zavadskaya.na@gmail.com</string>
    <string name="terms_of_use_link" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="not_found" translatable="false">Ничего не нашлось</string>
    <string name="internet_error" translatable="false">Проблемы со связью</string>
    <string name="check_internet" translatable="false">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="reload" translatable="false">Обновить</string>
    <string name="clear_history" translatable="false">Очистить историю</string>
    <string name="you_searched" translatable="false">Вы искали</string>
    <string name="empty_favorites" translatable="false">Ваша медиатека пуста</string>
    <string name="no_playlists" translatable="false">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist" translatable="false">Новый плейлист</string>
    <string name="tab_favorites" translatable="false">Избранные треки</string>
    <string name="tab_playlists" translatable="false">Плейлисты</string>
    <string name="library">Library</string>
    <string name="favorites">Favorites</string>
    <string name="playlists">Playlists</string>
    <string name="settings">Settings</string>
</resources>