<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".search.ui.SearchFragment">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/search_backbutton_toolbar"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:background="@android:color/transparent"
        app:contentInsetStartWithNavigation="0dp"
        app:title="@string/button_search"
        app:titleTextColor="@color/text"
        app:titleTextAppearance="@style/searchToolbarTitleStyle"
        app:elevation="0dp"/>

    <!-- Поисковая строка -->
    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:theme="@style/SearchButton"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:background="@drawable/search_bar">

        <ImageView
            android:theme="@style/SearchButton"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/search"
            android:layout_marginVertical="10dp"
            android:layout_marginLeft="12dp"
            app:tint="@color/dark_gray" />

        <EditText
            android:id="@+id/inputEditText"
            android:theme="@style/SearchButton"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:hint="@string/button_search"
            android:lines="1"
            android:maxLength="15"
            android:textSize="@dimen/textSize16"
            android:paddingVertical="8dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textColorHint="@color/dark_gray"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textCursorDrawable="@color/background"
            android:background="@null"/>

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="right"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:layout_marginVertical="10dp"
            android:layout_marginRight="12dp"
            app:tint="@color/dark_gray"
            android:visibility="gone"/>
    </FrameLayout>

    <!-- Значок загрузки -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="#3772E7"
        android:layout_marginTop="140dp"
        android:visibility="gone"/>

    <!-- История поиска -->
    <ScrollView
        android:id="@+id/search_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="60dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/you_searched"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/you_searched"
                android:layout_marginTop="24dp"
                android:theme="@style/searchErrorText"
                android:layout_marginBottom="20dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/searchHistoryRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            <Button
                android:id="@+id/clear_history_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_history"
                android:layout_gravity="center"
                android:backgroundTint="@color/reload_button"
                app:cornerRadius="54dp"
                android:textSize="@dimen/textSize14"
                android:textAllCaps="false"
                android:layout_marginTop="34dp"
                android:textColor="@color/button_text"
                android:fontFamily="@font/ys_display_medium"/>
        </LinearLayout>
    </ScrollView>

    <!-- Результаты поиска -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <!-- Страница "Не найдено" -->
    <LinearLayout
        android:id="@+id/not_found"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/not_found_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/not_found"
            android:layout_gravity="center"
            android:layout_marginTop="102dp"/>
        <TextView
            android:id="@+id/not_found_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/not_found"
            android:layout_marginTop="16dp"
            android:theme="@style/searchErrorText"/>
    </LinearLayout>

    <!-- Страница Ошибка интернет-соединения -->
    <LinearLayout
        android:id="@+id/internet_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/internet_error_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/internet_error"
            android:layout_gravity="center"
            android:layout_marginTop="102dp"/>

        <TextView
            android:id="@+id/internet_problems_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/internet_error"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/check_internet_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_internet"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/reload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reload"
            android:layout_gravity="center"
            android:backgroundTint="@color/reload_button"
            android:textSize="@dimen/textSize14"
            android:layout_marginTop="24dp"/>
    </LinearLayout>
</LinearLayout>