<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.PlaylistMaker.Search">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back"
            style="@style/settingsButton"
            app:iconGravity="textStart"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_search"
            android:textSize="26sp"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="@dimen/text_margin"
            android:fontFamily="@font/ys_display_medium"
            android:textFontWeight="500"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:theme="@style/SearchButton"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/search_bar"
        android:layout_marginVertical="8dp">

        <ImageView
            android:theme="@style/SearchButton"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/search"
            android:layout_marginVertical="10dp"
            android:layout_marginLeft="12dp"
            app:tint="@color/dark_gray" />

        <EditText
            android:id="@+id/inputEditText"
            android:theme="@style/SearchButton"
            android:textColor="@color/dark_gray"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:hint="@string/button_search"
            android:lines="1"
            android:maxLength="15"
            android:textSize="@dimen/textSize16"
            android:paddingVertical="8dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textColorHint="@color/dark_gray"
            android:imeOptions="actionDone"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="right"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:layout_marginVertical="10dp"
            android:layout_marginRight="12dp"
            app:tint="@color/dark_gray"
            android:visibility="gone"/>
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/not_found_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/not_found"
        android:layout_gravity="center"
        android:layout_marginTop="102dp"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/not_found_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_found"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:theme="@style/searchErrorText"/>

    <ImageView
        android:id="@+id/internet_error_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/internet_error"
        android:layout_gravity="center"
        android:layout_marginTop="102dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/internet_error_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/internet_error"
        android:layout_marginTop="16dp"
        android:theme="@style/searchErrorText"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/internet_error_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_internet"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:theme="@style/searchErrorText"
        android:visibility="gone"/>

    <Button
        android:id="@+id/reload_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reload"
        android:layout_gravity="center"
        android:backgroundTint="@color/reload_button"
        app:cornerRadius="54dp"
        android:textSize="@dimen/textSize14"
        android:textAllCaps="false"
        android:layout_marginTop="24dp"
        android:textColor="@color/button_text"
        android:fontFamily="@font/ys_display_medium"
        android:visibility="gone"/>
</LinearLayout>