<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:src="@drawable/back"
            app:iconTint="@color/black"
            app:iconGravity="textStart"
            android:layout_margin="@dimen/settings_image_margin"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_settings"
            android:textFontWeight="500"
            android:textColor="@color/almost_black"
            android:textSize="22sp"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_marginTop"
            android:layout_marginBottom="@dimen/text_margin"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/settings_paddingVertical"
                android:layout_weight="1"
                android:text="@string/dark_theme"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_marginTop"
                android:layout_marginBottom="@dimen/text_margin"/>

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="11dp"
                android:checked="false"
                app:icon="@drawable/control"
                app:iconGravity="textStart"
                app:iconTint="@color/dark_gray"
                android:layout_margin="@dimen/settings_image_margin"
                android:layout_gravity="center"
                android:alpha="0.6"
                tools:ignore="UseSwitchCompatOrMaterialXml"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/settings_paddingVertical"
                android:layout_weight="1"
                android:text="@string/share"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_marginTop"
                android:layout_marginBottom="@dimen/text_margin"/>

            <ImageView
                android:layout_width="@dimen/settings_image_width"
                android:layout_height="@dimen/settings_image_height"
                android:src="@drawable/share"
                app:iconTint="@color/dark_gray"
                android:layout_margin="@dimen/settings_image_margin"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/settings_paddingVertical"
                android:layout_weight="1"
                android:text="@string/write_to_support"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_marginTop"
                android:layout_marginBottom="@dimen/text_margin"/>

            <ImageView
                android:layout_width="@dimen/settings_image_width"
                android:layout_height="@dimen/settings_image_height"
                android:src="@drawable/support"
                app:iconTint="@color/dark_gray"
                android:layout_margin="@dimen/settings_image_margin"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/settings_paddingVertical"
                android:layout_weight="1"
                android:text="@string/terms_of_use"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_marginTop"
                android:layout_marginBottom="@dimen/text_margin"/>

            <ImageView
                android:layout_width="@dimen/settings_image_width"
                android:layout_height="@dimen/settings_image_height"
                android:src="@drawable/arrow"
                app:iconTint="@color/dark_gray"
                android:layout_margin="@dimen/settings_image_margin"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>